--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DB_URI=mongodb+srv://ESpasciani:<AugustChristianEthanMaitri>@isidequestcluster.gmrxsv8.mongodb.net/ISideQuest_db?retryWrites=true&w=majority&appName=ISideQuestCluster
+DB_URI=mongodb+srv://ESpasciani:AugustChristianEthanMaitri>@isidequestcluster.gmrxsv8.mongodb.net/?retryWrites=true&w=majority&appName=ISideQuestCluster
 PORT=4000
