--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.3",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.2",
-    "mongoose-unique-validator": "^5.0.0"
+    "mongoose-unique-validator": "^5.0.0",
+    "validator": "^13.11.0"
   }
 }
